Updated app and README.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A command line application to generate profiles for team members within an organization.  Written as a part of the University of Washington Full-Stack Web Developer Coding Bootcamp.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --verbose test",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
